# AI_DATA_ANALYTICS_PIPELINE

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  main.py  opencode.json  project-documentation.md  pyproject.toml  render.yaml  requirements.txt
app/: backend_api.py  main.py
app/charts/: chart_engine.py  dashboard_builder.py
app/config/: settings.py
app/crew/agents/: etl_agent.py  ingestion_agent.py  insights_agent.py  mcp_tool_agent.py  qa_agent.py  report_agent.py  sql_analyst_agent.py  visualization_agent.py
app/crew/crews/: analytics_crew.py  etl_crew.py  report_crew.py
app/crew/memory/: memory_manager.py
app/crew/tasks/: etl_tasks.py  ingestion_tasks.py  insights_tasks.py  qa_tasks.py  report_tasks.py  sql_tasks.py  visualization_tasks.py
app/crew/tools/: mcp_tools.py
app/db/: dashboard_store.py  duckdb_manager.py  sqlalchemy_manager.py  warehouse.py
app/etl/: cleaning.py  feature_engineering.py  ingestion.py  pdf_parser.py  pipeline_manager.py  profiling.py  transformation.py  validation.py
app/llm/: ollama_service.py
app/mcp/: mcp_client.py  mcp_server.py  tools.py
app/reports/: report_generator.py
app/services/: analytics_service.py  etl_service.py  session_service.py
app/ui/: app.py  sidebar.py
app/ui/pages/: agent_monitor.py  analytics.py  chat.py  dashboard.py  data_preview.py  etl_pipeline.py  insights.py  reports.py  settings.py
app/utils/: helpers.py  logging.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/app/: layout.tsx  routes.tsx
frontend/src/types/: api.ts
(+15 files in other folders)
