[project]
name = "ai-analytics-etl-copilot"
version = "1.0.0"
description = "AI-native ETL + Analytics platform with CrewAI multi-agent orchestration, local Ollama LLMs, and Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.108.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=19.0.0",
    "openpyxl>=3.1.0",
    "duckdb>=1.2.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.24.0",
    "altair>=5.4.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.10.0",
]

[project.scripts]
ai-analytics = "app.main:main"
